Rename onboarding package

--- a/app/src/lite/AndroidManifest.xml
+++ b/app/src/lite/AndroidManifest.xml
@@ -57,7 +57,7 @@
         android:networkSecurityConfig="@xml/network_security_config"
         tools:replace="android:label">
         <activity
-            android:name=".ui.onBoarding.OnBoardingActivity"
+            android:name=".ui.onboarding.OnBoardingActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
