--- a/app/build.gradle
+++ b/app/build.gradle
@@ -197,6 +197,7 @@ dependencies {
     implementation 'com.github.clans:fab:1.6.4'
     implementation 'com.applandeo:material-calendar-view:1.9.2'
     implementation 'com.afollestad.material-dialogs:commons:0.9.6.0'
+    implementation 'com.borax12.materialdaterangepicker:library:2.0'
     implementation 'com.nex3z:toggle-button-group:1.2.3'
     implementation('com.opencsv:opencsv:5.12.0') {
         exclude group: 'commons-logging', module: 'commons-logging'
@@ -211,6 +212,12 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.2"
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.29'
 
+    implementation 'com.mikepenz:google-material-typeface:3.0.1.1.original@aar'
+    implementation 'com.mikepenz:fontawesome-typeface:5.3.1.1@aar'
+    implementation 'com.mikepenz:octicons-typeface:3.2.0.5@aar'
+    implementation 'com.mikepenz:itemanimators:1.1.0@aar'
+    implementation 'com.mikepenz:crossfader:1.6.0@aar'
+    implementation 'com.mikepenz:crossfadedrawerlayout:1.1.0@aar'
     implementation('com.mikepenz:materialdrawer:6.1.1@aar') { transitive = true}
 
     def camera_version = "1.4.2"
