--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -5,8 +5,10 @@ on:
     branches:
       - '*'
       - '!master'
-      - 'dependabot/**'
+      - 'claude/**'
       - 'codex/**'
+      - 'dependabot/**'
+      - 'jules/**'
       - '*-codex/**'
 
 jobs:
