--- a/app/build.gradle
+++ b/app/build.gradle
@@ -223,7 +223,7 @@ dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.2")
     implementation("pl.droidsonroids.gif:android-gif-drawable:1.2.29")
 
-    testImplementation("junit:junit:4.13.2)
+    testImplementation("junit:junit:4.13.2")
 }
 realm {
     syncEnabled = true
