--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,7 +8,7 @@ updates:
       prefix: "actions:"
     open-pull-requests-limit: 10
   - package-ecosystem: "gradle"
-    directories:
+    directory:
       - "/"
       - "/app"
     schedule:
