--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,13 +10,13 @@ android {
         applicationId "org.ole.planet.myplanet"
         minSdk = 26
         targetSdk = 36
-        versionCode = 3783
-        versionName = "0.37.83"
+        versionCode = 3784
+        versionName = "0.37.84"
         ndkVersion = '26.3.11579264'
         vectorDrawables.useSupportLibrary = true
     }
     configurations.configureEach {
-        resolutionStrategy.force 'com.google.android.material:material:1.13.0'
+        resolutionStrategy.force "com.google.android.material:material:${libs.versions.material.get()}"
     }
     buildTypes {
         release {
