--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -22,8 +22,8 @@ jobs:
       - name: download dependencies
         run: ./gradlew dependencies
 
-      - name: clean gradle cache from workspace
-        run: rm -rf .gradle
+      #- name: clean gradle cache from workspace
+      #  run: rm -rf .gradle
 
       - name: upload workspace
         uses: actions/upload-artifact@v4
