--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   release:
     name: myPlanet release
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-2404
     strategy:
       fail-fast: false
       matrix:
@@ -35,13 +35,6 @@ jobs:
           ls -al "$file" "$lite"
           diff <(sed 's/^\s*<!--//; s/-->\s*$//' "$file") <(sed 's/^\s*<!--//; s/-->\s*$//' "$lite")
           cp "$lite" "$file"
-
-      - name: setup JDK 17
-        uses: actions/setup-java@v5
-        with:
-          distribution: temurin
-          java-version: 17
-          cache: gradle
 
       - name: setup gradle
         uses: gradle/actions/setup-gradle@v5
